# learning-loop

./: .gitattributes  .gitignore  .gitmodules  BUILD.md  DEPLOY.md  DOCKER.md  README.md  RL_SIM.md  learning-loop.sln  nuget.config  test.runsettings  test.single-threaded.runsettings
.github/codeql/: codeql-config.yml
Common/: BatchBlockExOptions.cs  CheckpointBlockHelperOptions.cs  Common.csproj  ILearnMetrics.cs  ILearningPolicy.cs  IModelExporter.cs  ITimeProvider.cs  InvalidModelCheckpointException.cs  JoinedLogFormat.cs  JoinerPipeline.cs  LearningPolicyFactory.cs  LogMirrorSettings.cs  MD5HashUtil.cs  Microsoft.DecisionService.Common.nuspec  Microsoft.DecisionService.Common.targets  SystemTimeProvider.cs  TracingLevel.cs  TrainerConfig.cs  TrainerException.cs  TrainerMode.cs  VwLearnMetricsFileParser.cs  VwOptionValidator.cs  app.config
CommonTest/: CommonTest.csproj  Constants.cs  OptionsSnapshotWrapper.cs  TestConfiguration.cs  TestOptionsMonitor.cs  Threading.cs
DotNetCore.Tests/: 12h_aggregates_v2.json  1d_aggregates_v2.json  1h_aggregates_v2.json  5m_cumulative_aggregates_v2.json  6h_aggregates_v2.json  ApprenticeTestMetrics.cs  AssertExtensions.cs  Constants.cs  DotNetCore.Tests.csproj  DotNetCore.UnitTests.playlist  FixedTimeProvider.cs  LearningPolicyTests.cs  PersonalizerExceptionValidator.cs  StartUpModes.cs  StorageIntegrationTest.cs  StorageUploadBlockIntegrationTests.cs  TestUtil.cs  aggregates.txt  currentModel-1000  featureimportance.json  summary.json  total_aggregates_v2.json  trainedModel-100  trainedModel-1000  trainedModel-10000  trainedModel-mt-100  trainedModel-multistep-10  trainedModelApprentice-100  trainedModelCCB-100  trainedModelCCBApprentice-100  trainedModelIgl-500  trainedModelLAS-100  trainedModelRandom-100  trainedModelRandom-1000  trainedModelRandom-10000  trainedModelRandom-100000  trainerModelCCBLASE2E-100  trainerModelLASE2E-100
Flatbuffers/: Flatbuffers.csproj
OnlineTrainerExe/: ConfigExtensions.cs  Dockerfile  MonitoringExporterConfig.cs  OnlineTrainerExe.csproj  Program.cs  ThirdPartyNotices.txt  onlinetrainer.sh  rl_sim.sh  start-app.sh
TestExeApp/: Program.cs  TestExeApp.csproj
Tests/: ApprenticeTestMetrics.cs  ConcatenatedByteStreamsTest.cs  Constants.cs  PathHelperTest.cs  StorageUploadBlockIntegrationTests.cs  TestMachineLearningArgsHelper.cs  TestUtil.cs  Tests.csproj  app.config
VWBinResolver/: VWBinResolver.ci.targets  VWBinResolver.csproj  VWBinResolver.dev.targets  VWBinResolver.vwbin.targets  VWBinResolver.vwbinbuild.targets
deploy/: README.md  acr-environment.bicep  acr-environment.json  acr-main.bicep  acr-main.json  environment.bicep  environment.json  learning-loop-sample.bicep  learning-loop-sample.json  main.bicep  sample-loop-environment.acr.bicepparam  sample-loop-environment.dockerhub.bicepparam  sample-loop.bicepparam  sample.bicepparam  vw-docker-sample.bicep  vw-docker-sample.json
docker/: ubuntu.dockerfile  ubuntu.test.dockerfile  windows-core.dockerfile
ext_libs/: CMakeLists.txt  CMakePresets.json  ext_libs.cmake  vcpkg.json
src/: CMakeLists.txt  CMakePresets.json  nuget.config  rl-binaries.cmake
src/Common/: AppId.cs  (+56 more)
(+306 files in other folders)
